[workspace]
members  = ["crates/*"]
resolver = "2"

[workspace.package]
edition    = "2024"
license    = "MIT OR Apache-2.0"
repository = "https://github.com/unavi-xyz/gltf_kun"
version    = "0.2.0"

[workspace.metadata.release]
shared-version = true
tag-name       = "v{{version}}"

[workspace.dependencies]
avian3d = "0.3.1"
petgraph = { default-features = false, features = [
  "stable_graph",
], version = "0.8.2" }
serde_json = "1.0.140"
thiserror = "2.0.12"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
