[package]
name = "bevy_gltf_kun"
description = "Bevy glTF plugin using gltf_kun."
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = "0.12.0"
gltf_kun = { version = "0.0.1", path = "../core" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
