[package]
name = "bevy_example"
publish = false
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
bevy = "0.13"
bevy_egui = "0.25.0"
bevy_gltf_kun = { path = "../bevy_gltf_kun" }
bevy_panorbit_camera = "0.16.0"
bevy_xpbd_3d = "0.4.2"
egui_graphs = "0.19.0"
gltf_kun = { path = "../gltf_kun" }
petgraph.workspace = true
wasm-bindgen = "=0.2.92"
