[package]
name = "bevy_gltf_kun"
description = "Bevy glTF plugin using gltf_kun."
keywords = ["bevy", "gltf"]
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = ["export", "import", "omi_physics"]
export = []
import = []
omi_physics = ["dep:bevy_xpbd_3d", "gltf_kun/omi_physics_body"]

[lints.clippy]
type_complexity = "allow"

[dependencies]
bevy = "0.13.0"
glam.workspace = true
gltf_kun = { version = "0.0.6", path = "../gltf_kun" }
serde_json.workspace = true
thiserror.workspace = true

bevy_xpbd_3d = { version = "0.4.2", optional = true }
