[package]
name = "bevy_gltf_kun"
description = "Bevy glTF plugin using gltf_kun."
keywords = ["bevy", "gltf"]
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lints.clippy]
type_complexity = "allow"

[features]
default = ["export", "import", "omi_physics"]
export = []
import = []
omi_physics = ["dep:bevy_xpbd_3d", "gltf_kun/omi_physics"]
register_extensions = []

[dependencies]
bevy = { version = "0.13.0", default-features = false, features = ["animation", "bevy_asset", "bevy_scene", "bevy_pbr"] }
glam.workspace = true
gltf_kun.workspace = true
image = "0.24.9"
serde_json.workspace = true
thiserror.workspace = true

bevy_xpbd_3d = { version = "0.4.2", optional = true }
