[package]
name = "gltf_kun_cli"
description = "gltf_kun cli tool"
keywords = ["cli", "gltf"]
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
gltf_kun = { version = "0.0.3", path = "../core" }
