[package]
name = "gltf_kun"
description="Graph-based glTF processing library."
keywords = ["gltf", "graph", "optimize"]
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
byteorder = "1.5.0"
glam.workspace = true
gltf = { version = "1.4.0", features = ["extensions", "extras"] }
petgraph = "0.6.4"
serde_json.workspace = true
thiserror.workspace = true
tracing = "0.1.40"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"] }
tracing-test = "0.2.4"
