[package]
edition.workspace    = true
license.workspace    = true
name                 = "bevy_example"
publish              = false
repository.workspace = true
version.workspace    = true

[dependencies]
avian3d.workspace    = true
bevy                 = { features = ["default", "jpeg"], workspace = true }
bevy_egui            = "0.38.0"
bevy_gltf_kun        = { features = ["omi_physics"], path = "../bevy_gltf_kun" }
bevy_panorbit_camera = "0.33.0"
gltf_kun             = { path = "../gltf_kun" }
