[package]
description = "Bevy glTF plugin using gltf_kun."
edition.workspace = true
keywords = ["bevy", "gltf"]
license.workspace = true
name = "bevy_gltf_kun"
repository.workspace = true
version.workspace = true

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[features]
default = []
omi_physics = ["dep:avian3d", "gltf_kun/omi_physics"]

[dependencies]
anyhow = "1.0.95"
avian3d = { workspace = true, optional = true }
bevy = { version = "0.15.0", default-features = false, features = [
  "animation",
  "bevy_asset",
  "bevy_pbr",
  "bevy_scene",
] }
gltf_kun = { path = "../gltf_kun", version = "0.1.0" }
image = "0.25.5"
serde_json.workspace = true
thiserror.workspace = true
