[package]
description          = "Bevy glTF plugin using gltf_kun."
edition.workspace    = true
keywords             = ["bevy", "gltf"]
license.workspace    = true
name                 = "bevy_gltf_kun"
repository.workspace = true
version.workspace    = true

[lints.clippy]
too_many_arguments = "allow"
type_complexity    = "allow"

[features]
default     = []
omi_physics = ["dep:avian3d", "gltf_kun/omi_physics"]

[dependencies]
anyhow = "1.0.100"
avian3d = { optional = true, workspace = true }
bevy = { features = [
  "animation",
  "bevy_asset",
  "bevy_log",
  "bevy_pbr",
  "bevy_scene",
], workspace = true }
gltf_kun = { path = "../gltf_kun", version = "0.2.0" }
image = "0.25.8"
serde = { features = ["derive"], version = "1.0" }
serde_json.workspace = true
thiserror.workspace = true
